0030760: Modeling Algorithms - Intersection fails in Occt 7.3.0

Use FORWARD orientation of edges and face when attaching pcurve from one edge to another.
Test case for the issue.